--- a/tests/visual/src/misc/pager.html
+++ b/tests/visual/src/misc/pager.html
@@ -16,7 +16,7 @@
     <div id="test-area" class="k-d-grid">
 
         <span>LTR</span>
-        <div>
+        <section>
             <div class="k-pager-wrap k-widget k-floatwrap">
                 <a class="k-link k-pager-nav k-pager-first k-state-disabled"><i is="Icon" name="arrow-end-left"></i></a>
                 <a class="k-link k-pager-nav k-state-focus"><i is="Icon" name="arrow-w"></i></a>
@@ -45,8 +45,8 @@
 
                 <span class="k-pager-info k-label">1 - 20 of 91 items</span>
             </div>
-        </div>
-        <div>
+        </section>
+        <section>
             <div class="k-pager-wrap k-widget k-floatwrap k-focus">
                 <a class="k-link k-pager-nav k-pager-first k-state-disabled"><i is="Icon" name="arrow-end-left"></i></a>
                 <a class="k-link k-pager-nav k-state-disabled"><i is="Icon" name="arrow-w"></i></a>
@@ -67,9 +67,9 @@
 
                 <span class="k-pager-info k-label">1 - 20 of 91 items</span>
             </div>
-        </div>
-        <div>
-            <div class="k-pager-wrap k-widget k-floatwrap" style="font-size: 12px;">
+        </section>
+        <section>
+            <div class="k-pager-wrap k-widget k-floatwrap">
                 <a class="k-link k-pager-nav k-pager-first k-state-disabled"><i is="Icon" name="arrow-end-left"></i></a>
                 <a class="k-link k-pager-nav k-state-disabled"><i is="Icon" name="arrow-w"></i></a>
                 <div class="k-pager-numbers-wrap">
@@ -96,11 +96,11 @@
 
                 <span class="k-pager-info k-label">1 - 20 of 91 items</span>
             </div>
-        </div>
+        </section>
 
 
         <span>RTL</span>
-        <div>
+        <section>
             <div class="k-pager-wrap k-widget k-floatwrap" dir="rtl">
                 <a class="k-link k-pager-nav k-pager-first k-state-disabled"><i is="Icon" name="arrow-end-left"></i></a>
                 <a class="k-link k-pager-nav k-state-disabled"><i is="Icon" name="arrow-w"></i></a>
@@ -128,8 +128,8 @@
 
                 <span class="k-pager-info k-label">1 - 20 of 91 items</span>
             </div>
-        </div>
-        <div>
+        </section>
+        <section>
             <div class="k-pager-wrap k-widget k-floatwrap" dir="rtl">
                 <a class="k-link k-pager-nav k-pager-first k-state-disabled"><i is="Icon" name="arrow-end-left"></i></a>
                 <a class="k-link k-pager-nav k-state-disabled"><i is="Icon" name="arrow-w"></i></a>
@@ -150,9 +150,9 @@
 
                 <span class="k-pager-info k-label">1 - 20 of 91 items</span>
             </div>
-        </div>
-        <div>
-            <div class="k-pager-wrap k-widget k-floatwrap" dir="rtl" style="font-size: 12px;">
+        </section>
+        <section>
+            <div class="k-pager-wrap k-widget k-floatwrap" dir="rtl">
                 <a class="k-link k-pager-nav k-pager-first k-state-disabled"><i is="Icon" name="arrow-end-left"></i></a>
                 <a class="k-link k-pager-nav k-state-disabled"><i is="Icon" name="arrow-w"></i></a>
                 <div class="k-pager-numbers-wrap">
@@ -179,7 +179,7 @@
 
                 <span class="k-pager-info k-label">1 - 20 of 91 items</span>
             </div>
-        </div>
+        </section>
 
     </div>
 
