--- a/tests/visual/src/misc/scheduler-angular-month.html
+++ b/tests/visual/src/misc/scheduler-angular-month.html
@@ -103,11 +103,11 @@
                                         </td>
                                         <td>
                                             <span class="k-link k-nav-day">04</span>
-                                            <div class="k-more-events k-button" style="width: 162px; left: 327px; top: 177px;"><i is="Icon" name="more-horizontal"></i></div>
+                                            <button is="Button" class="k-more-events" icon="more-horizontal" style="width: 162px; left: 327px; top: 177px;"></button>
                                         </td>
                                         <td>
                                             <span class="k-link k-nav-day">05</span>
-                                            <div class="k-more-events k-button" style="width: 162px; left: 490px; top: 177px;"><i is="Icon" name="more-horizontal"></i></div>
+                                            <button is="Button" class="k-more-events" icon="more-horizontal" style="width: 162px; left: 490px; top: 177px;"></button>
                                         </td>
                                         <td>
                                             <span class="k-link k-nav-day">06</span>
