--- a/tests/visual/src/misc/spreadsheet.html
+++ b/tests/visual/src/misc/spreadsheet.html
@@ -557,7 +557,7 @@
                 <button is="Button" icon="add" class="k-spreadsheet-sheets-bar-add"></button>
                 <div class="k-spreadsheet-sheets-items k-tabstrip-scrollable k-tabstrip k-floatwrap k-tabstrip-bottom">
                     <div class="k-tabstrip-items-wrapper k-hstack">
-                        <button is="Button" fillMode="flat" icon="arrow-60-left" class="k-tabstrip-prev"></button>
+                        <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-left" class="k-tabstrip-prev"></button>
                         <ul class="k-reset k-tabstrip-items">
                             <li class="k-item k-state-active k-state-tab-on-top k-spreadsheet-sheets-bar-active">
                                 <span class="k-link">Food Order</span>
@@ -568,7 +568,7 @@
                                 <button is="Button" fillMode="flat" icon="close" class="k-spreadsheet-sheets-remove k-remove-tab"></button>
                             </li>
                         </ul>
-                        <button is="Button" fillMode="flat" icon="arrow-60-right" class="k-tabstrip-next"></button>
+                        <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-right" class="k-tabstrip-next"></button>
                     </div>
                 </div>
             </div>
