--- a/tests/visual/src/misc/stepper-vertical.html
+++ b/tests/visual/src/misc/stepper-vertical.html
@@ -23,9 +23,9 @@
 
     <div id="test-area" class="grid">
         <span>Indicator</span>
-        <span>< + label</span>
-        <span>Icons</span>
-        <span>Labels</span>
+        <span>Indicator + label</span>
+        <span>Icon</span>
+        <span>Label</span>
 
         <section>
             <nav class="k-stepper k-widget" style="display: grid; grid-template-rows: repeat(12, 1fr)">
@@ -198,7 +198,7 @@
                                 <span class="k-step-text">Personal Info</span>
                             </span>
                         </a>
-                        <div class="k-step-content" style="height: 100px">
+                        <div class="k-step-content" style="height: 140px">
                             <div class="content">
                                 This is the first step of your wizard with inline content.
                             </div>
