--- a/tests/visual/src/misc/tabstrip-scrollable-rtl.html
+++ b/tests/visual/src/misc/tabstrip-scrollable-rtl.html
@@ -35,7 +35,7 @@
         <section>
             <kendo-tabstrip class="k-widget k-tabstrip k-floatwrap k-header k-tabstrip-top k-tabstrip-scrollable" dir="rtl">
                 <div class="k-tabstrip-items-wrapper k-hstack">
-                    <button is="Button" fillMode="flat" icon="arrow-60-left" class="k-tabstrip-prev"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-left" class="k-tabstrip-prev"></button>
                     <ul class="k-reset k-tabstrip-items">
                         <li class="k-item k-first k-state-active">
                             <span class="k-link">First</span>
@@ -48,7 +48,7 @@
                             <span class="k-link">Focused</span>
                         </li>
                     </ul>
-                    <button is="Button" fillMode="flat" icon="arrow-60-right" class="k-tabstrip-next"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-right" class="k-tabstrip-next"></button>
                 </div>
                 <div class="k-tabstrip-content k-state-active k-state-focused">
                     <div>Top scrollable</div>
@@ -62,7 +62,7 @@
                     <div>Bottom scrollable</div>
                 </div>
                 <div class="k-tabstrip-items-wrapper k-hstack">
-                    <button is="Button" fillMode="flat" icon="arrow-60-left" class="k-tabstrip-prev"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-left" class="k-tabstrip-prev"></button>
                     <ul class="k-reset k-tabstrip-items">
                         <li class="k-item k-first k-state-active">
                             <span class="k-link">First</span>
@@ -75,7 +75,7 @@
                             <span class="k-link">Focused</span>
                         </li>
                     </ul>
-                    <button is="Button" fillMode="flat" icon="arrow-60-right" class="k-tabstrip-next"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-right" class="k-tabstrip-next"></button>
                 </div>
             </kendo-tabstrip>
         </section>
@@ -83,7 +83,7 @@
         <section>
             <kendo-tabstrip class="k-widget k-tabstrip k-floatwrap k-header k-tabstrip-left k-tabstrip-scrollable" dir="rtl">
                 <div class="k-tabstrip-items-wrapper k-vstack">
-                    <button is="Button" fillMode="flat" icon="arrow-60-up" class="k-tabstrip-prev"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-up" class="k-tabstrip-prev"></button>
                     <ul class="k-reset k-tabstrip-items">
                         <li class="k-item k-first k-state-active">
                             <span class="k-link">Active</span>
@@ -105,7 +105,7 @@
                             <span class="k-link">Disabled</span>
                         </li>
                     </ul>
-                    <button is="Button" fillMode="flat" icon="arrow-60-down" class="k-tabstrip-next"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-down" class="k-tabstrip-next"></button>
                 </div>
                 <div class="k-tabstrip-content k-state-active">
                     <div>Scrollable Left orientation</div>
@@ -116,7 +116,7 @@
         <section>
             <kendo-tabstrip class="k-widget k-tabstrip k-floatwrap k-header k-tabstrip-right k-tabstrip-scrollable" dir="rtl">
                 <div class="k-tabstrip-items-wrapper k-vstack">
-                    <button is="Button" fillMode="flat" icon="arrow-60-up" class="k-tabstrip-prev"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-up" class="k-tabstrip-prev"></button>
                     <ul class="k-reset k-tabstrip-items">
                         <li class="k-item k-first k-state-active">
                             <span class="k-link">Active</span>
@@ -138,7 +138,7 @@
                             <span class="k-link">Disabled</span>
                         </li>
                     </ul>
-                    <button is="Button" fillMode="flat" icon="arrow-60-down" class="k-tabstrip-next"></button>
+                    <button is="Button" fillMode="flat" rounded="null" size="null" shape="null" icon="arrow-60-down" class="k-tabstrip-next"></button>
                 </div>
                 <div class="k-tabstrip-content k-state-active">
                     <div>Scrollable Right orientation</div>
