--- a/tests/visual/src/misc/tooltip.html
+++ b/tests/visual/src/misc/tooltip.html
@@ -9,35 +9,20 @@
     <script src="../../../../packages/html/dist/index.js"></script>
 
     <style>
-        #test-area {
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-        }
-        .dark { background-color: #333; }
-        .light { background-color: #eee; }
-
-        /* rest position and visiblity */
-        .k-animation-container,
-        .k-popup,
-        .k-tooltip {
+        .k-animation-container {
+            display: inline-block;
             position: relative;
             overflow: visible;
         }
 
-        /* reset display and align */
-        .k-animation-container {
-            display: inline-flex;
-            vertical-align: top;
-        }
-
-        /* reset padding */
-        .k-popup:not(.k-tooltip) {
-            padding: 0;
+        .k-tooltip {
+            position: relative;
         }
     </style>
 </head>
 <body class="k-body">
 
-    <div id="test-area" class="grid">
+    <div id="test-area" class="k-d-grid k-grid-cols-4">
 
         <span>Callout top</span>
         <span>Callout right</span>
@@ -45,7 +30,7 @@
         <span>Callout left</span>
 
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown k-tooltip-wrapper">
+            <div class="k-animation-container">
                 <div class="k-popup k-popup-transparent">
                     <div class="k-tooltip">
                         <div class="k-tooltip-content">angular tooltip</div>
@@ -55,7 +40,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown k-tooltip-wrapper">
+            <div class="k-animation-container">
                 <div class="k-popup k-popup-transparent">
                     <div class="k-tooltip">
                         <div class="k-tooltip-content">angular tooltip</div>
@@ -65,7 +50,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown k-tooltip-wrapper">
+            <div class="k-animation-container">
                 <div class="k-popup k-popup-transparent">
                     <div class="k-tooltip">
                         <div class="k-tooltip-content">angular tooltip</div>
@@ -75,7 +60,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown k-tooltip-wrapper">
+            <div class="k-animation-container">
                 <div class="k-popup k-popup-transparent">
                     <div class="k-tooltip">
                         <div class="k-tooltip-content">angular tooltip</div>
@@ -117,7 +102,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">react tooltip</div>
                     <div class="k-callout k-callout-n"></div>
@@ -125,7 +110,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">react tooltip</div>
                     <div class="k-callout k-callout-e"></div>
@@ -133,7 +118,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">react tooltip</div>
                     <div class="k-callout k-callout-s"></div>
@@ -141,7 +126,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">react tooltip</div>
                     <div class="k-callout k-callout-w"></div>
@@ -158,7 +143,7 @@
         <span>Long content closable</span>
 
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">tooltip content</div>
                     <div class="k-callout k-callout-w"></div>
@@ -166,7 +151,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip k-tooltip-closable">
                     <div class="k-tooltip-content">tooltip content</div>
                     <div class="k-tooltip-button"><i is="Icon" name="x"></i></div>
@@ -175,7 +160,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">long tooltip content. Enough so it goes on another line</div>
                     <div class="k-callout k-callout-w"></div>
@@ -183,7 +168,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip k-tooltip-closable">
                     <div class="k-tooltip-content">long tooltip content. Enough so it goes on another line</div>
                     <div class="k-tooltip-button"><i is="Icon" name="x"></i></div>
@@ -201,7 +186,7 @@
         <span>Title with glyphs closable</span>
 
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">
                         <div class="k-tooltip-title">Tooltip title</div>
@@ -212,7 +197,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip k-tooltip-closable">
                     <div class="k-tooltip-content">
                         <div class="k-tooltip-title">Tooltip title</div>
@@ -224,7 +209,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip">
                     <div class="k-tooltip-content">
                         <div class="k-tooltip-title">
@@ -238,7 +223,7 @@
             </div>
         </section>
         <section>
-            <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
+            <div class="k-animation-container">
                 <div class="k-tooltip k-tooltip-closable">
                     <div class="k-tooltip-content">
                         <div class="k-tooltip-title">
