--- a/tests/visual/src/misc/menu.html
+++ b/tests/visual/src/misc/menu.html
@@ -10,7 +10,6 @@
 
     <style>
         #test-area {
-            grid-template-columns: 1fr 1fr;
             align-items: start;
         }
 
@@ -19,13 +18,14 @@
         }
 
         .k-animation-container {
-            overflow: visible;
+            position: absolute;
+            top: 100%;
         }
     </style>
 </head>
 <body class="k-body">
 
-    <div id="test-area" class="grid">
+    <div id="test-area" class="k-d-grid k-grid-cols-2">
 
         <span>Horizontal Menu</span>
         <span>Horizontal Scrolling Menu</span>
@@ -33,42 +33,48 @@
         <!-- horizontal menu -->
         <section>
             <ul id="menu" class="k-widget k-reset k-header k-menu k-menu-horizontal">
-                <li class="k-item k-menu-item k-state-disabled k-first">
+                <li class="k-item k-menu-item k-disabled k-first">
                     <span class="k-link k-menu-link"> Disabled</span>
                 </li>
                 <li class="k-item k-menu-item">
                     <span class="k-link k-menu-link">Normal</span>
                 </li>
-                <li class="k-item k-menu-item k-state-hover">
+                <li class="k-item k-menu-item k-hover">
                     <span class="k-link k-menu-link">
-                        Hover
-                        <i is="Icon" class="k-menu-expand-arrow" name="arrow-s"></i>
+                        <span class="k-menu-link-text">Hover</span>
+                        <span class="k-menu-expand-arrow">
+                            <i is="Icon" name="arrow-s"></i>
+                        </span>
                     </span>
                 </li>
                 <li class="k-item k-menu-item">
-                    <span class="k-link k-menu-link k-state-active">
-                        Active
-                        <i is="Icon" class="k-menu-expand-arrow" name="arrow-s"></i>
+                    <span class="k-link k-menu-link k-active">
+                        <span class="k-menu-link-text">Active</span>
+                        <span class="k-menu-expand-arrow">
+                            <i is="Icon" name="arrow-s"></i>
+                        </span>
                     </span>
-                    <div class="k-animation-container" style="position: absolute; top: 100%">
+                    <div class="k-animation-container k-animation-container-fixed k-animation-container-shown">
                         <div class="k-popup k-menu-popup">
-                            <menu is="MenuList">
+                            <div is="MenuList">
                                 <div is="MenuItem" text="Disabled" disabled></div>
                                 <div is="MenuItem" text="Normal"></div>
                                 <div is="MenuItem" text="Hover" hover showArrow></div>
                                 <div is="MenuItem" text="Active" active showArrow></div>
                                 <div is="MenuItem" text="Focus" focus></div>
-                            </menu>
+                            </div>
                         </div>
                     </div>
                 </li>
-                <li class="k-item k-menu-item k-state-focused">
-                    <span class="k-link k-menu-link">Focus</span>
+                <li class="k-item k-menu-item k-focus">
+                    <span class="k-link k-menu-link">
+                        <span class="k-menu-link-text">Focus</span>
+                    </span>
                 </li>
                 <li class="k-item k-menu-item k-last">
                     <span class="k-link k-menu-link">
                         <i is="Icon" name="folder"></i>
-                        Normal
+                        <span class="k-menu-link-text">Normal</span>
                     </span>
                 </li>
             </ul>
