test(button): add clear button test

--- a/tests/visual/src/misc/button-flat.html
+++ b/tests/visual/src/misc/button-flat.html
@@ -35,7 +35,7 @@
         <span><button is="Button" fillMode="flat" disabled>Disabled</button></span>
 
         <span>primary</span>
-        <span><button is="Button" fillMode="flat" fillMode="flat" themeColor="primary">Normal</button></span>
+        <span><button is="Button" fillMode="flat" themeColor="primary">Normal</button></span>
         <span><button is="Button" fillMode="flat" themeColor="primary" hover>Hover</button></span>
         <span><button is="Button" fillMode="flat" themeColor="primary" focus>Focus</button></span>
         <span><button is="Button" fillMode="flat" themeColor="primary" active>Active</button></span>
