--- a/tests/visual/src/misc/button-link.html
+++ b/tests/visual/src/misc/button-link.html
@@ -35,7 +35,7 @@
         <span><button is="Button" fillMode="link" disabled>Disabled</button></span>
 
         <span>primary</span>
-        <span><button is="Button" fillMode="link" fillMode="link" themeColor="primary">Normal</button></span>
+        <span><button is="Button" fillMode="link" themeColor="primary">Normal</button></span>
         <span><button is="Button" fillMode="link" themeColor="primary" hover>Hover</button></span>
         <span><button is="Button" fillMode="link" themeColor="primary" focus>Focus</button></span>
         <span><button is="Button" fillMode="link" themeColor="primary" active>Active</button></span>
