feat(icons): add new icons to the font

--- a/tests/visual/src/misc/icons.html
+++ b/tests/visual/src/misc/icons.html
@@ -616,7 +616,14 @@
             "blockquote",
             "list-latin-big",
             "list-latin-small",
-            "list-unordered-square"
+            "list-unordered-square",
+            "list-unordered-outline",
+            "chevron-double-up",
+            "chevron-double-down",
+            "chevron-double-right",
+            "chevron-double-left",
+            "data-ods",
+            "file-report"
         ];
 
         document.getElementById("test-area").innerHTML = icons.map( icon => {
