test(calen dar): update infinite calendar vsiaul tests

--- a/tests/visual/src/misc/calendar-infinite.html
+++ b/tests/visual/src/misc/calendar-infinite.html
@@ -10,7 +10,7 @@
 
     <style>
         #test-area {
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr);
         }
     </style>
 </head>
@@ -19,7 +19,7 @@
     <div id="test-area" class="grid">
 
         <section>
-            <span>infinite calendar month</span>
+            <div>infinite calendar month</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -234,7 +234,7 @@
         </section>
 
         <section>
-            <span class="col-3">infinite calendar with long month names</span>
+            <div>infinite calendar with long month names</span>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -277,7 +277,7 @@
                 </kendo-calendar-navigation>
                 <kendo-calendar-viewlist class="k-calendar-view k-calendar-monthview k-vstack">
                     <kendo-calendar-header class="k-calendar-header k-hstack">
-                        <button is="Button" fillMode="flat" class="k-calendar-title k-title">April 2018</button>
+                        <button is="Button" fillMode="flat" class="k-calendar-title k-title">d’abril 2018</button>
                         <span class="k-spacer"></span>
                         <span class="k-calendar-nav k-hstack">
                             <span class="k-nav-today">Today</span>
@@ -449,7 +449,7 @@
         </section>
 
         <section>
-            <span>infinite calendar year</span>
+            <div>infinite calendar year</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -607,7 +607,7 @@
         </section>
 
         <section>
-            <span>infinite calendar decade</span>
+            <div>infinite calendar decade</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -741,7 +741,7 @@
         </section>
 
         <section>
-            <span>infinite calendar century</span>
+            <div>infinite calendar century</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -863,7 +863,7 @@
         </section>
 
         <section>
-            <span>infinite calendar empty cells</span>
+            <div>infinite calendar empty cells</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -956,7 +956,7 @@
         </section>
 
         <section>
-            <span>infinite calendar - week number column</span>
+            <div>infinite calendar - week number column</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite k-week-number">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
