--- a/tests/visual/src/misc/calendar-infinite-rtl.html
+++ b/tests/visual/src/misc/calendar-infinite-rtl.html
@@ -10,7 +10,7 @@
 
     <style>
         #test-area {
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr);
         }
     </style>
 </head>
@@ -19,7 +19,7 @@
     <div id="test-area" class="grid">
 
         <section>
-            <span>infinite calendar month</span>
+            <div>infinite calendar month</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite" dir="rtl">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -234,7 +234,7 @@
         </section>
 
         <section>
-            <span>infinite calendar with long month names</span>
+            <div>infinite calendar with long month names</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite" dir="rtl">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -449,7 +449,7 @@
         </section>
 
         <section>
-            <span>infinite calendar year</span>
+            <div>infinite calendar year</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite" dir="rtl">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -607,7 +607,7 @@
         </section>
 
         <section>
-            <span>infinite calendar decade</span>
+            <div>infinite calendar decade</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite" dir="rtl">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -741,7 +741,7 @@
         </section>
 
         <section>
-            <span>infinite calendar century</span>
+            <div>infinite calendar century</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite" dir="rtl">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -863,7 +863,7 @@
         </section>
 
         <section>
-            <span>infinite calendar empty cells</span>
+            <div>infinite calendar empty cells</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite" dir="rtl">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
@@ -956,7 +956,7 @@
         </section>
 
         <section>
-            <span>infinite calendar - week number column</span>
+            <div>infinite calendar - week number column</div>
             <kendo-calendar class="k-widget k-calendar k-calendar-infinite k-week-number" dir="rtl">
                 <kendo-calendar-navigation class="k-calendar-navigation">
                     <span class="k-calendar-navigation-highlight"></span>
